# cityscaper

./: Cargo.toml  Readme.md  index.html
res/: assets.blend  assets.blend1  bake_and_export  bake_and_export.py  colors.json  lsystem copy.json  lsystem.json  lut copy.json  lut.json  mahkrneki.json  presets.json  template.json
res/shaders/: shader.wgsl
res/systems/: angle 50.json  grm.json  initial.json  myyyb taka grda smreka.json  normal tree.json  ta mi je ful usec.json  tak zanimiv z kotom 45.json  tko lovkast.json
src/: application.rs  camera_controller.rs  color_obj.rs  cylinder.rs  icosphere.rs  image.rs  lib.rs  main.rs  mesh_renderer.rs  render_data.rs  timer.rs
src/application/: color.rs  logic.rs  mod.rs  setup.rs
src/l_system/: builder.rs  colors.rs  config.rs  mod.rs  test.rs
