[package]
name = "l_system"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
rand = "0.8.5"
serde = {version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = "0.27.0"
regex = "1.10.4"
is_none_or = "0.1.0"
prev-iter = "0.2.0"
image = "0.25.1"
hex_color = "3.0.0"
lazy_static = "1.4.0"
raw-window-handle = "0.5"

[dependencies.windows]
version = "0.57"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"]

[dependencies.jandering_engine]
path = "../jandering_engine - Copy"
